# autonomous-mobile-robot-uno-player

./: README.md
MÒBIL/: Informe móvil.docx  com executar.docx
MÒBIL/PF mobil/navegacio/uno_wall_navigation_actualizado/: CMakeLists.txt  package.xml
MÒBIL/PF mobil/navegacio/uno_wall_navigation_actualizado/config/: card_waypoints.yaml
MÒBIL/PF mobil/navegacio/uno_wall_navigation_actualizado/launch/: uno_mission_only.launch  uno_mission_test.launch  uno_navigation.launch  wall_follower.launch  waypoint_setup.launch
MÒBIL/PF mobil/navegacio/uno_wall_navigation_actualizado/maps/: README.txt  mi_mapa_uno.pgm  mi_mapa_uno.yaml
MÒBIL/PF mobil/navegacio/uno_wall_navigation_actualizado/scripts/: mission_controller.py  wall_follower_node.py  waypoint_setup_helper.py
MÒBIL/PF mobil/uno_detector_ros/: CMakeLists.txt  package.xml
MÒBIL/PF mobil/uno_detector_ros/launch/: uno_detector.launch  uno_system.launch
MÒBIL/PF mobil/uno_detector_ros/scripts/: image_republisher.py  uno_detector_node.py  uno_game_controller.py
MÒBIL/PF mobil/uno_orchestrator_ros/uno_orchestrator_ros/: CMakeLists.txt  package.xml
MÒBIL/PF mobil/uno_orchestrator_ros/uno_orchestrator_ros/launch/: uno_orchestrator.launch
MÒBIL/PF mobil/uno_orchestrator_ros/uno_orchestrator_ros/scripts/: uno_orchestrator_node.py
