<?xml version="1.0"?>
<package format="2">
  <name>uno_orchestrator_ros</name>
  <version>0.0.1</version>
  <description>Orquestador ROS1 para jugar una ronda sencilla de UNO con TurtleBot3 Waffle/Waffle Pi.</description>

  <maintainer email="student@example.com">student</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>move_base_msgs</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>turtlebot3_msgs</depend>
  <depend>tf</depend>
</package>
